<resources>
    <string name="app_name">Prova</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="button_text_first_fragment">Second Activity</string>
    <string name="write_your_text">Insert Your Text</string>

    <string name="button_text_second_fragment">First Activity</string>
    <string name="settings">Settings</string>

    <string name="colore_di_sfondo">Background colour</string>
    <string name="summary_colore_di_sfondo">Choose your background colour</string>

    <string-array name="codici_colori">
        <item>#000000</item>
        <item>#FF0000</item>
        <item>#00FF00</item>
    </string-array>
    <string-array name="colori">
        <item>@string/nero</item>
        <item>@string/rosso</item>
        <item>@string/verde</item>
    </string-array>

    <string name="empty_name">loading...</string>
    <string name="url_error">Errore nel reperimento dei dati.</string>

    <string name="nero">Nero</string>
    <string name="rosso">Rosso</string>
    <string name="verde">Verde</string>
    <string name="titolo_custom">Titolo custom</string>
    <string name="titolo_da_usare">Titolo da usare</string>
    <string name="summary_usa_titolo_custom">Usa un titolo diverso da quello standard</string>
    <string name="usa_titolo_custom">Usa titolo custom</string>
    <string name="titolo_activity">Titolo activity</string>
    <string name="preferences">Preferences</string>
    <string name="primo_avvio">Primo avvio</string>
    <string name="start">Start</string>
    <string name="task">Task</string>
    <string name="stop">Stop</string>

</resources>